CVS HEAD:
 * language and i18n
  * new translation: Estonian
  * updated translations: Dutch, French, German, Hungarian, Portuguese (Brazilian), Russian, Slovenian, Spanish
  * fixed untranslatable strings
  * language fixes and polishing (English)
 * campaign modifications
  * dialog improvements in EI
 * unit modifications
  * fixed several image files being referred to by wrong name
  * removed sound of thrown spear from Drake Clasher spear melee attack
  * added get_hit_sound:s to Elder Mage (Delfador) and Elvish Lady (Parandra)
  * added translatable hero names
  * dropped Soulless cost to 11 and increased its hitpoints to 28
 * WML modifications
  * made [capture_village] accept a location range
 * various bug fixes and code clean ups
 * rewrite of mp lobby code
 * fixed bug that made the ai recruit badly
 * when using zipios, ignore {~...} clauses, and handle {@...} as if there
   was no '@', fixing the double appearance of user campaigns in the
   campaign listing

Version 0.8.11:
 * new translation:
  * British English
 * updated translations:
  * Basque
  * Catalan
  * French
  * German
  * Italian
  * Latin
  * Slovenian
  * Swedish
 * in language-selection dialog, consistently use native name for
   all languages, with the (hopefully) official latin transcription
   for those that cannot be displayed in the default font (russian,
   bulgarian, greek)
 * language fixes and polishing (English)
 * campaign fixes and changes:
  * fixed Delfador appearing in the water when turns run out in 'The Bay of Pearls' (HttT)
  * updated maps for: 'Northern Winter' & 'Mountain Pass' (HttT)
  * updated 'Evacuation' & 'Captured' (EI)
  * fixed the talking tentacle in 'Temple of the Deep' (TroW)
  * switch to the new Merfolk and Nagas in TRoW and HttT
 * unit fixes and changes:
  * fixed several units using non-existing sound files
  * added sounds (existing) to several attacks
  * updated all uses of the 'old fireball' to use the 'new fireballs'